[package]
name = "authcraft"
version = "0.4.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
base32 = "0.5.1"
bcrypt = "0.17.0"
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.5", features = [
    "tokio1",
    "tokio1-native-tls",
    "builder",
    "smtp-transport",
] }
qr2term = "0.3.3"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
totp-rs = "5.6.0"
